--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -1,155 +1,229 @@
-<form
-  tuiTextfieldSize="m"
-  [formGroup]="playerForm"
-  [tuiTextfieldLabelOutside]="true"
-  style="padding: 10px"
->
-  @if (players && players.length && playerForm && playersArray && playersArray.length) {
-
-    <div class="table">
-      @if (players && players.length) {
-        <div formArrayName="{{this.arrayName + this.side}}" class="table-body">
-
-          <div
-            *ngFor="let playerFormGroup of playersArray.controls; let i = index"
-            class="table-row"
-            [formGroupName]="i"
-          >
-            <div class="table-cell first">
-              @if (isRowEnabled(i)) {
-                <app-select-player-number
-                  [control]="getFormControl(this.playerForm, i, 'number', 'players')"
-                ></app-select-player-number>
-              } @else {
-                #{{ getFormDataByIndexAndKey(playerFormGroup, i, 'number') }}
-              }
-            </div>
+@if (match && side) {
+  <form
+    tuiTextfieldSize="m"
+    [formGroup]="playerForm"
+    [tuiTextfieldLabelOutside]="true"
+    style="padding: 10px"
+  >
+    @if (
+      players &&
+      players.length &&
+      playerForm &&
+      playersArray &&
+      playersArray.length
+    ) {
+      <div class="table">
+        @if (players && players.length) {
+          <div [formArrayName]="arrayName + side" class="table-body">
             <div
-              class="table-cell left"
-              (click)="toggle(playerFormGroup.get('playerInMatchId' + i)!.value)"
+              *ngFor="
+                let playerFormGroup of playersArray.controls;
+                let i = index
+              "
+              class="table-row"
+              [formGroupName]="i"
             >
-              @if (getFormDataByIndexAndKey(playerFormGroup, i, 'playerId')) {
-                @if (getFormDataByIndexAndKey(playerFormGroup, i, 'fullName'); as name) {
-                  {{ name | titlecase }}
+              <div class="table-cell first">
+                @if (isRowEnabled(i)) {
+                  <app-select-player-number
+                    [control]="
+                      getFormControl(this.playerForm, i, 'number', 'players')
+                    "
+                  ></app-select-player-number>
+                } @else {
+                  #{{ getFormDataByIndexAndKey(playerFormGroup, i, "number") }}
                 }
-              } @else {
-                @if (availablePlayersInTeamTournament.length > 0) {
-                  <app-select-player-to-match
-                    [playerList]="availablePlayersInTeamTournament"
-                    [matchId]="match.id!"
-                    [control]="getFormControl(this.playerForm, i, 'number', 'playerInTeamTournament')"
-                  ></app-select-player-to-match>
-                }
-              }
-            </div>
-
-            <div class="table-cell left">
-              @if (sportId) {
-                @if (positions) {
-                  @if (isRowEnabled(i)) {
-                    <app-select-player-position
-                      [positionList]="positions"
-                      [index]="i"
-                      [sportId]="sportId"
-                      [control]="getFormControl(this.playerForm, i, 'position', 'players')"
-                    ></app-select-player-position>
-                  } @else {
-                    {{ getFormDataByIndexAndKey(playerFormGroup, i, 'position')?.title | uppercase }}
+              </div>
+              <div
+                class="table-cell left"
+                (click)="
+                  toggle(playerFormGroup.get('playerInMatchId' + i)!.value)
+                "
+              >
+                @if (getFormDataByIndexAndKey(playerFormGroup, i, "playerId")) {
+                  @if (
+                    getFormDataByIndexAndKey(playerFormGroup, i, "fullName");
+                    as name
+                  ) {
+                    {{ name | titlecase }}
+                  }
+                } @else {
+                  @if (
+                    availablePlayersInTeamTournament &&
+                    availablePlayersInTeamTournament.length > 0
+                  ) {
+                    <!-- @for (
+                      p of availablePlayersInTeamTournament;
+                      track p.playerInTeamTournament.id
+                    ) {
+                      {{ p.playerInSport?.person?.second_name }}
+                    } -->
+                    <app-select-player-to-match
+                      [playerList]="availablePlayersInTeamTournament"
+                      [matchId]="match.id!"
+                      [control]="
+                        getFormControl(
+                          this.playerForm,
+                          i,
+                          'playerInTeamTournament',
+                          arrayName + side
+                        )
+                      "
+                    ></app-select-player-to-match>
                   }
                 }
-              }
-            </div>
-            @if (playerFormGroup.get('playerInMatchId' + i)!.value; as id) {
-              <tui-expand [expanded]="isExpanded(id)" class="expand">
-                <ng-template tuiExpandContent>
-                  <div class="table-cell actions">
-                    <div class="player-short-profile">
-                      @if (playerFormGroup.get('photoUrl' + i)!.value; as photoUrl) {
-                        <tui-avatar
-                          size="xl"
-                          text="uploaded logo"
-                          class="player-photo-short-profile"
-                          [rounded]="false"
-                          [avatarUrl]="backendUrl + photoUrl"
-                          (error)="onImgError($event)"
-                        ></tui-avatar>
+              </div>
 
-                        <!--                        <img-->
+              <div class="table-cell left">
+                @if (sportId) {
+                  @if (positions) {
+                    @if (isRowEnabled(i)) {
+                      <app-select-player-position
+                        [positionList]="positions"
+                        [index]="i"
+                        [sportId]="sportId"
+                        [control]="
+                          getFormControl(
+                            this.playerForm,
+                            i,
+                            'position',
+                            arrayName + side
+                          )
+                        "
+                      ></app-select-player-position>
+                    } @else {
+                      {{
+                        getFormDataByIndexAndKey(playerFormGroup, i, "position")
+                          ?.title | uppercase
+                      }}
+                    }
+                  }
+                }
+              </div>
+              @if (playerFormGroup.get("playerInMatchId" + i)!.value; as id) {
+                <tui-expand [expanded]="isExpanded(id)" class="expand">
+                  <ng-template tuiExpandContent>
+                    <div class="table-cell actions">
+                      <div class="player-short-profile">
+                        @if (
+                          playerFormGroup.get("photoUrl" + i)!.value;
+                          as photoUrl
+                        ) {
+                          <tui-avatar
+                            size="xl"
+                            text="uploaded logo"
+                            class="player-photo-short-profile"
+                            [rounded]="false"
+                            [avatarUrl]="backendUrl + photoUrl"
+                            (error)="onImgError($event)"
+                          ></tui-avatar>
+
+                          <!--                        <img-->
                           <!--                          src="{{url}}{{photoUrl}}"-->
                           <!--                          height="100px"-->
                           <!--                          alt="Photo"-->
                           <!--                          (error)="onImgError($event)"-->
                           <!--                          class="player-photo-short-profile"-->
                           <!--                        >-->
-                      }
-                      @if (playerFormGroup.get('dob' + i)!.value; as dob) {
-                        <span>{{ dob | date }}</span>
-                        <!--                        <span>Age: {{ calculateAge(dob) }} years</span>-->
-                      }
-                      @if (deleteOrUpdate == 'deleteFromTeam') {
-                        <app-actions-buttons
-                          [id]="id"
-                          [index]="i"
-                          [deleteOrUpdate]="'deleteFromTeam'"
-                          [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') | uppercase"
-                          [isEnabled]="isRowEnabled(i)"
-                          [isDataChanged]="isDataChanged(i)"
-                          (onEdit)="enableRowToEdit($event.index)"
-                          (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                          (onCancel)="onCancelButtonClick()"
-                          (onDeleteUpdate)="onSubmit($event.action, $event.index, $event.id)"
-                          (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer'+$event.id!)"
-                        ></app-actions-buttons>
-                      } @else {
-                        <app-actions-buttons
-                          [id]="id"
-                          [index]="i"
-                          [deleteOrUpdate]="'delete'"
-                          [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') | uppercase"
-                          [isEnabled]="isRowEnabled(i)"
-                          [isDataChanged]="isDataChanged(i)"
-                          (onEdit)="enableRowToEdit($event.index)"
-                          (onDelete)="onDelete($event.id!)"
-                          (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                          (onCancel)="onCancelButtonClick()"
-                          (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer'+$event.id!)"
-                        ></app-actions-buttons>
-                      }
+                        }
+                        @if (playerFormGroup.get("dob" + i)!.value; as dob) {
+                          <span>{{ dob | date }}</span>
+                          <!--                        <span>Age: {{ calculateAge(dob) }} years</span>-->
+                        }
+                        @if (deleteOrUpdate == "deleteFromTeam") {
+                          <app-actions-buttons
+                            [id]="id"
+                            [index]="i"
+                            [deleteOrUpdate]="'deleteFromTeam'"
+                            [item]="
+                              getFormDataByIndexAndKey(
+                                playerFormGroup,
+                                i,
+                                'fullName'
+                              ) | uppercase
+                            "
+                            [isEnabled]="isRowEnabled(i)"
+                            [isDataChanged]="isDataChanged(i)"
+                            (onEdit)="enableRowToEdit($event.index)"
+                            (onSubmit)="
+                              onSubmit($event.action, $event.index, $event.id)
+                            "
+                            (onCancel)="onCancelButtonClick()"
+                            (onDeleteUpdate)="
+                              onSubmit($event.action, $event.index, $event.id)
+                            "
+                            (onDeleteDialog)="
+                              onDeleteButtonClick(
+                                'deleteDialogPlayer' + $event.id!
+                              )
+                            "
+                          ></app-actions-buttons>
+                        } @else {
+                          <app-actions-buttons
+                            [id]="id"
+                            [index]="i"
+                            [deleteOrUpdate]="'delete'"
+                            [item]="
+                              getFormDataByIndexAndKey(
+                                playerFormGroup,
+                                i,
+                                'fullName'
+                              ) | uppercase
+                            "
+                            [isEnabled]="isRowEnabled(i)"
+                            [isDataChanged]="isDataChanged(i)"
+                            (onEdit)="enableRowToEdit($event.index)"
+                            (onDelete)="onDelete($event.id!)"
+                            (onSubmit)="
+                              onSubmit($event.action, $event.index, $event.id)
+                            "
+                            (onCancel)="onCancelButtonClick()"
+                            (onDeleteDialog)="
+                              onDeleteButtonClick(
+                                'deleteDialogPlayer' + $event.id!
+                              )
+                            "
+                          ></app-actions-buttons>
+                        }
+                      </div>
                     </div>
-                  </div>
-                </ng-template>
-              </tui-expand>
-            } @else {
-              <app-actions-buttons
-                [index]="i"
-                (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                (onCancel)="onCancelButtonClick()"
-              ></app-actions-buttons>
-            }
+                  </ng-template>
+                </tui-expand>
+              } @else {
+                <app-actions-buttons
+                  [index]="i"
+                  (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
+                  (onCancel)="onCancelButtonClick()"
+                ></app-actions-buttons>
+              }
+            </div>
           </div>
-        </div>
-        @if (!players.length || players[players.length - 1].match_player.id !== null) {
+          @if (
+            !players.length ||
+            players[players.length - 1].match_player.id !== null
+          ) {
+            <div class="table-row final">
+              <app-add-button-on-final-tr
+                [action]="'add player'"
+                (onAdd)="addNewPlayer()"
+              ></app-add-button-on-final-tr>
+            </div>
+          }
+        } @else {
           <div class="table-row final">
             <app-add-button-on-final-tr
-              [action]="'add player'"
               (onAdd)="addNewPlayer()"
             ></app-add-button-on-final-tr>
           </div>
         }
-      } @else {
-        <div class="table-row final">
-          <app-add-button-on-final-tr
-            (onAdd)="addNewPlayer()"
-          ></app-add-button-on-final-tr>
-        </div>
-      }
-    </div>
-  } @else {
-    No Players
-    <div class="table-row final">
-      <app-add-button-on-final-tr
-        (onAdd)="addNewPlayer()"
-      ></app-add-button-on-final-tr>
-    </div>
-  }
-</form>
+      </div>
+    } @else {
+      No Players
+      <div class="table-row final">
+        <app-add-button-on-final-tr
+          (onAdd)="addNewPlayer()"
+        ></app-add-button-on-final-tr>
+      </div>
+    }
+  </form>
+}
