--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -1,19 +1,17 @@
 @if (match && side) {
+  {{ match.match_id }} {{ side }}
   <form
     tuiTextfieldSize="m"
     [formGroup]="playerForm"
     [tuiTextfieldLabelOutside]="true"
     style="padding: 10px"
   >
-    @if (
-      players &&
-      players.length &&
-      playerForm &&
-      playersArray &&
-      playersArray.length
-    ) {
+    <!-- @for (p of players; track $index) {
+      {{ p }}
+    } -->
+    @if (players && players.length) {
       <div class="table">
-        @if (players && players.length) {
+        @if (players.length) {
           <div [formArrayName]="arrayName + side" class="table-body">
             <div
               *ngFor="
@@ -23,17 +21,41 @@
               class="table-row"
               [formGroupName]="i"
             >
+              <!-- @if (
+                getFormDataByIndexAndKey(playerFormGroup, i, "playerId");
+                as id
+              ) {
+                {{ id }} -->
               <div class="table-cell first">
                 @if (isRowEnabled(i)) {
                   <app-select-player-number
                     [control]="
-                      getFormControl(this.playerForm, i, 'number', 'players')
+                      getFormControl(
+                        this.playerForm,
+                        i,
+                        'number',
+                        arrayName + side
+                      )
                     "
                   ></app-select-player-number>
                 } @else {
                   #{{ getFormDataByIndexAndKey(playerFormGroup, i, "number") }}
                 }
               </div>
+              <!-- } @else {
+                <div class="table-cell first">
+                  <app-select-player-number
+                    [control]="
+                      getFormControl(
+                        this.playerForm,
+                        i,
+                        'number',
+                        arrayName + side
+                      )
+                    "
+                  ></app-select-player-number>
+                </div>
+              } -->
               <div
                 class="table-cell left"
                 (click)="
@@ -52,12 +74,6 @@
                     availablePlayersInTeamTournament &&
                     availablePlayersInTeamTournament.length > 0
                   ) {
-                    <!-- @for (
-                      p of availablePlayersInTeamTournament;
-                      track p.playerInTeamTournament.id
-                    ) {
-                      {{ p.playerInSport?.person?.second_name }}
-                    } -->
                     <app-select-player-to-match
                       [playerList]="availablePlayersInTeamTournament"
                       [matchId]="match.id!"
@@ -69,15 +85,46 @@
                           arrayName + side
                         )
                       "
+                      (playerSelect)="onPlayerSelect($event, i)"
                     ></app-select-player-to-match>
                   }
                 }
               </div>
 
-              <div class="table-cell left">
-                @if (sportId) {
-                  @if (positions) {
-                    @if (isRowEnabled(i)) {
+              @if (getFormDataByIndexAndKey(playerFormGroup, i, "playerId")) {
+                <div class="table-cell left">
+                  @if (sportId) {
+                    @if (positions) {
+                      @if (isRowEnabled(i)) {
+                        <app-select-player-position
+                          [positionList]="positions"
+                          [index]="i"
+                          [sportId]="sportId"
+                          [control]="
+                            getFormControl(
+                              this.playerForm,
+                              i,
+                              'position',
+                              arrayName + side
+                            )
+                          "
+                        ></app-select-player-position>
+                      } @else {
+                        {{
+                          getFormDataByIndexAndKey(
+                            playerFormGroup,
+                            i,
+                            "position"
+                          )?.title | uppercase
+                        }}
+                      }
+                    }
+                  }
+                </div>
+              } @else {
+                <div class="table-cell left">
+                  @if (sportId) {
+                    @if (positions) {
                       <app-select-player-position
                         [positionList]="positions"
                         [index]="i"
@@ -91,15 +138,10 @@
                           )
                         "
                       ></app-select-player-position>
-                    } @else {
-                      {{
-                        getFormDataByIndexAndKey(playerFormGroup, i, "position")
-                          ?.title | uppercase
-                      }}
                     }
                   }
-                }
-              </div>
+                </div>
+              }
               @if (playerFormGroup.get("playerInMatchId" + i)!.value; as id) {
                 <tui-expand [expanded]="isExpanded(id)" class="expand">
                   <ng-template tuiExpandContent>
@@ -130,35 +172,7 @@
                           <span>{{ dob | date }}</span>
                           <!--                        <span>Age: {{ calculateAge(dob) }} years</span>-->
                         }
-                        @if (deleteOrUpdate == "deleteFromTeam") {
-                          <app-actions-buttons
-                            [id]="id"
-                            [index]="i"
-                            [deleteOrUpdate]="'deleteFromTeam'"
-                            [item]="
-                              getFormDataByIndexAndKey(
-                                playerFormGroup,
-                                i,
-                                'fullName'
-                              ) | uppercase
-                            "
-                            [isEnabled]="isRowEnabled(i)"
-                            [isDataChanged]="isDataChanged(i)"
-                            (onEdit)="enableRowToEdit($event.index)"
-                            (onSubmit)="
-                              onSubmit($event.action, $event.index, $event.id)
-                            "
-                            (onCancel)="onCancelButtonClick()"
-                            (onDeleteUpdate)="
-                              onSubmit($event.action, $event.index, $event.id)
-                            "
-                            (onDeleteDialog)="
-                              onDeleteButtonClick(
-                                'deleteDialogPlayer' + $event.id!
-                              )
-                            "
-                          ></app-actions-buttons>
-                        } @else {
+                        @if (deleteOrUpdate == "delete") {
                           <app-actions-buttons
                             [id]="id"
                             [index]="i"
