player match refactoring

--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -9,7 +9,7 @@
     <!-- @for (p of players; track $index) {
       {{ p }}
     } -->
-    @if (players && players.length) {
+    @if (players) {
       <div class="table">
         @if (players.length) {
           <div [formArrayName]="arrayName + side" class="table-body">
