--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -1,5 +1,4 @@
 @if (match && side) {
-  {{ match.match_id }} {{ side }}
   <form
     tuiTextfieldSize="m"
     [formGroup]="playerForm"
@@ -9,8 +8,14 @@
     <!-- @for (p of players; track $index) {
       {{ p }}
     } -->
-    @if (players) {
-      <div class="table">
+    @if (
+      players &&
+      players.length &&
+      playerForm &&
+      playersArray &&
+      playersArray.length
+    ) {
+      <div class="table-match-roster">
         @if (players.length) {
           <div [formArrayName]="arrayName + side" class="table-body">
             <div
@@ -18,15 +23,14 @@
                 let playerFormGroup of playersArray.controls;
                 let i = index
               "
-              class="table-row"
+              class="table-row-match-roster"
               [formGroupName]="i"
             >
               <!-- @if (
                 getFormDataByIndexAndKey(playerFormGroup, i, "playerId");
                 as id
-              ) {
-                {{ id }} -->
-              <div class="table-cell first">
+              ) { -->
+              <div class="table-cell-match-roster first">
                 @if (isRowEnabled(i)) {
                   <app-select-player-number
                     [control]="
@@ -57,10 +61,8 @@
                 </div>
               } -->
               <div
-                class="table-cell left"
-                (click)="
-                  toggle(playerFormGroup.get('playerInMatchId' + i)!.value)
-                "
+                class="table-cell-match-roster name"
+                (click)="toggle(playerFormGroup.get('playerId' + i)!.value)"
               >
                 @if (getFormDataByIndexAndKey(playerFormGroup, i, "playerId")) {
                   @if (
@@ -91,38 +93,37 @@
                 }
               </div>
 
-              @if (getFormDataByIndexAndKey(playerFormGroup, i, "playerId")) {
-                <div class="table-cell left">
-                  @if (sportId) {
-                    @if (positions) {
-                      @if (isRowEnabled(i)) {
-                        <app-select-player-position
-                          [positionList]="positions"
-                          [index]="i"
-                          [sportId]="sportId"
-                          [control]="
-                            getFormControl(
-                              this.playerForm,
-                              i,
-                              'position',
-                              arrayName + side
-                            )
-                          "
-                        ></app-select-player-position>
-                      } @else {
-                        {{
-                          getFormDataByIndexAndKey(
-                            playerFormGroup,
+              <!-- @if (getFormDataByIndexAndKey(playerFormGroup, i, "playerId")) { -->
+              <div class="table-cell-match-roster left">
+                @if (sportId) {
+                  <!-- {{ sportId }} -->
+                  @if (positions) {
+                    <!-- {{ positions }} -->
+                    @if (isRowEnabled(i)) {
+                      <app-select-player-position
+                        [positionList]="positions"
+                        [index]="i"
+                        [sportId]="sportId"
+                        [control]="
+                          getFormControl(
+                            this.playerForm,
                             i,
-                            "position"
-                          )?.title | uppercase
-                        }}
-                      }
+                            'position',
+                            arrayName + side
+                          )
+                        "
+                      ></app-select-player-position>
+                    } @else {
+                      {{
+                        getFormDataByIndexAndKey(playerFormGroup, i, "position")
+                          ?.title | uppercase
+                      }}
                     }
                   }
-                </div>
-              } @else {
-                <div class="table-cell left">
+                }
+              </div>
+              <!-- } @else {
+                <div class="table-cell-match-roster left">
                   @if (sportId) {
                     @if (positions) {
                       <app-select-player-position
@@ -141,11 +142,11 @@
                     }
                   }
                 </div>
-              }
+              } -->
               @if (playerFormGroup.get("playerInMatchId" + i)!.value; as id) {
                 <tui-expand [expanded]="isExpanded(id)" class="expand">
                   <ng-template tuiExpandContent>
-                    <div class="table-cell actions">
+                    <div class="table-cell-match-roster actions">
                       <div class="player-short-profile">
                         @if (
                           playerFormGroup.get("photoUrl" + i)!.value;
@@ -216,7 +217,7 @@
             !players.length ||
             players[players.length - 1].match_player.id !== null
           ) {
-            <div class="table-row final">
+            <div class="table-row-match-roster final">
               <app-add-button-on-final-tr
                 [action]="'add player'"
                 (onAdd)="addNewPlayer()"
@@ -224,7 +225,7 @@
             </div>
           }
         } @else {
-          <div class="table-row final">
+          <div class="table-row-match-roster final">
             <app-add-button-on-final-tr
               (onAdd)="addNewPlayer()"
             ></app-add-button-on-final-tr>
@@ -233,7 +234,7 @@
       </div>
     } @else {
       No Players
-      <div class="table-row final">
+      <div class="table-row-match-roster final">
         <app-add-button-on-final-tr
           (onAdd)="addNewPlayer()"
         ></app-add-button-on-final-tr>
