--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.less
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.less
@@ -14,10 +14,9 @@
   display: grid;
   justify-content: start;
   align-items: center;
-  grid-template-columns: minmax(70px, 0.2fr) minmax(150px, 0.5fr) minmax(
-      65px,
-      0.2fr
-    );
+  grid-template-columns:
+    minmax(70px, 0.2fr) minmax(150px, 0.5fr) minmax(65px, 0.2fr),
+    minmax(50px, 0.1fr);
   grid-template-rows: auto auto;
 
   background-color: #f2f2f2;
@@ -35,7 +34,7 @@
 }
 
 .expand {
-  grid-column: span 3;
+  grid-column: span 4;
 }
 
 .actions {
@@ -66,6 +65,10 @@
 
 .left {
   text-align: left;
+}
+
+.right {
+  text-align: right;
 }
 
 .final {
